force-app/main/default/objects/AthleteMicrocycleDay__c/AthleteMicrocycleDay__c.object-meta.xml
<CustomObject>
    <description>Charge prevue vs reelle par athlete et par jour de microcycle (alignement).</description>
    <label>Athlete Microcycle Day</label>
    <nameField>
        <displayFormat>AMD-{000000}</displayFormat>
        <label>Athlete Microcycle Day Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Athlete Microcycle Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>