force-app/main/default/objects/AthleteMicrocycleDay__c/fields/ActualLoad__c.field-meta.xml
<CustomField>
    <fullName>ActualLoad__c</fullName>
    <description>Charge realisee (post-seance).</description>
    <label>Actual Load</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>