force-app/main/default/objects/AthleteMicrocycleDay__c/fields/Athlete__c.field-meta.xml
<CustomField>
    <fullName>Athlete__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Athlete</label>
    <referenceTo>Athlete__c</referenceTo>
    <relationshipLabel>Athlete Microcycle Days</relationshipLabel>
    <relationshipName>AthleteMicrocycleDayLinks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>