force-app/main/default/objects/AthleteMicrocycleDay__c/fields/LoadComment__c.field-meta.xml
<CustomField>
    <fullName>LoadComment__c</fullName>
    <description>Ecart prevu/reel, blessure, adaptation.</description>
    <label>Load Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>