force-app/main/default/objects/AthleteMicrocycleDay__c/fields/MicrocycleDay__c.field-meta.xml
<CustomField>
    <fullName>MicrocycleDay__c</fullName>
    <label>Microcycle Day</label>
    <referenceTo>MicrocycleDay__c</referenceTo>
    <relationshipLabel>Athlete Microcycle Days</relationshipLabel>
    <relationshipName>AthleteMicrocycleDays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>