force-app/main/default/objects/AthleteMicrocycleDay__c/fields/PlannedLoad__c.field-meta.xml
<CustomField>
    <fullName>PlannedLoad__c</fullName>
    <description>Charge prevue (ex. TRIMP, AU, score interne).</description>
    <label>Planned Load</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>